# Biwenger2

./: .gitignore  Dockerfile  api.py  main.py  pyproject.toml  requirements.txt
Biwenger/: __init__.py  biwenger.py  teams.csv
FutbolFantasy/: __init__.py  const.py  ff.py
GUI/: app_base.py  functionalities.py
Sofascore/: sofascore.py
